# routes/api.php
@@ -1,29 +1,30 @@
-<?php
+<?php        
+    use Illuminate\Http\Request;
+    use Illuminate\Support\Facades\Route;
+    use App\Http\Controllers\API\AuthController;
+    use App\Http\Controllers\API\FlowerController;
+    
+    
+Route::prefix('user')->group(function(){
+    Route::get('users', function(){
+        return $request->user();
+    });
+    Route::post('/register', [ AuthController::class, 'register']);
+    Route::get('/login',[AuthController::class, 'login'])->name('login');
+    Route::post('/logout', [ AuthController::class, 'logout'])->middleware('auth:api');
+});
 
-use Illuminate\Http\Request;
-use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\API\FlowerController;
-
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:api');
-
-// Route::apiResource('flowers', FlowerController::class);
-
-Route::resource('flower', FlowerController::class,
-    [
-        'only'=>[
+    Route::resource('flower', FlowerController::class,[
+        'only' =>  [
             'index',
             'show'
         ]
-    ]
-        );
-
-Route::resource('flower', FlowerController::class,
-    [
-        'except'=>[
-            'index',
-            'show'
-        ]
-    ])->middleware(['auth:api']);
-        
+        ]);
+    
+    Route::resource('flower', FlowerController::class,[
+            'except' =>  [
+                'index',
+                'show'
+            ]
+            ])->middleware(['auth:api']);
+    
